# selene-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  STANDARDS.md  main.py  pyproject.toml  selene  todo.txt
.github/workflows/: build-release.yml
docs/: cli.md
src/: exceptions.py  logging_conf.py  settings.py  system_examples.md  utils.py
src/cli/: chat.py  console.py  main.py  ollama.py  rag.py  selene.py
src/database/: db.py
src/internal/: agent.py  memory_utils.py  prompt_utils.py  system.py
src/internal/agent/: general.py  memory_utils.py  prompt_utils.py
src/internal/agents/: factory.py  memory_utils.py  prompt_utils.py
src/internal/agents/archivist/: agent.py  prompt.md  schema.py
src/internal/agents/general/: agent.py  prompt.md
src/internal/agents/general/prompts/: identity.md  system.md  tools.md
src/internal/agents/orchestrator/: agent.py  prompt.md
src/internal/agents/planact/: agent.py
src/internal/agents/planact/prompts/: files.md  identity.md  tools.md
src/internal/agents/planner/: agent.py  prompt.md  schema.py
src/internal/agents/react/: agent.py  prompt.md
src/internal/agents/reflect/: agent.py  prompt.md
src/internal/agents/researcher/: agent.py  prompt.md  schema.py
src/internal/agents/router/: agent.py  prompt.md
src/internal/agents/shared_prompts/: identity.md
src/internal/app/: chat.py  chat_app.tcss
src/internal/llm/: ollama.py  ollama_health.py
src/internal/prompts/: prompt_utils.py  system.md  system_examples.md
src/internal/rag/: builder.py  rag_utils.py  updater.py
src/internal/tools/: local_search.py  registry.py  web_search.py
src/internal/ui/: theme.py
src/tests/: conftest.py  test_cli.py  test_prompt_utils.py  test_utils.py
src/tests/fixtures/prompt_agents/complete/prompts/: files.md  identity.md  system.md  task.md  tools.md
src/tests/fixtures/prompt_agents/with_nested/prompts/: files.md  identity.md  (+1 more)
src/tests/unit/: test_planner_agent.py  test_planner_schema.py  test_prompt_utils.py  test_utils.py
(+1 files in other folders)
