[project]
name = "selene"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "textual>=8.1.1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.6",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = [ "src/tests" ]
pythonpath = [ "." ]

[tool.ruff]
lint.select = ["I"]
